app/main/default/objects/sf_tfs__Field__c/sf_tfs__Field__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Default_State__c</fullName>
        <label>Default State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__allowedValues__c</fullName>
        <label>allowedValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__alwaysRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alwaysRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__defaultValue__c</fullName>
        <label>defaultValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__dependentFields__c</fullName>
        <label>dependentFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__helpText__c</fullName>
        <label>helpText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__readOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>readOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__referenceName__c</fullName>
        <externalId>true</externalId>
        <label>referenceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__url__c</fullName>
        <label>url</label>
        <type>Url</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <columns>NAME</columns>
        <columns>sf_tfs__type__c</columns>
        <columns>sf_tfs__allowedValues__c</columns>
        <columns>sf_tfs__defaultValue__c</columns>
        <columns>sf_tfs__readOnly__c</columns>
        <columns>sf_tfs__alwaysRequired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>