app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__alwaysRequired__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__alwaysRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alwaysRequired</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>