app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__dependentFields__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__dependentFields__c</fullName>
        <label>dependentFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>