app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__helpText__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__helpText__c</fullName>
        <label>helpText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>