app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>