app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__referenceName__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__referenceName__c</fullName>
        <externalId>true</externalId>
        <label>referenceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>