app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>