app/main/default/objects/sf_tfs__Field__c/fields/sf_tfs__url__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__url__c</fullName>
        <label>url</label>
        <type>Url</type>
    </fields>
</CustomObject>