app/main/default/objects/sf_tfs__Field__c/listViews/sf_tfs__All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <columns>NAME</columns>
        <columns>sf_tfs__type__c</columns>
        <columns>sf_tfs__allowedValues__c</columns>
        <columns>sf_tfs__defaultValue__c</columns>
        <columns>sf_tfs__readOnly__c</columns>
        <columns>sf_tfs__alwaysRequired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>